# event_pipeline

./: .env  .env.example  .gitignore  pyproject.toml
.github/workflows/: deploy.yml
src/iam_pipeline/: config.py  logging_setup.py
src/iam_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/iam_pipeline/bedrock/: __init__.py  rag_validator.py
src/iam_pipeline/codegen/: approval_store.py  buffer.py  event_parser.py  policy_fetcher.py  policy_utils.py  resource_store.py  server.py  tf_writer.py
src/iam_pipeline/executor/: cache.py  runner.py  workspace.py
src/iam_pipeline/orchestrator/: pipeline.py
systemd/: iam-pipeline.service
tests/: test_event_parser.py
